--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -20,6 +20,7 @@
 
     <string-array name="pref_video_quality_entries" translatable="false">
         <item>@string/pref_video_quality_entry_high</item>
+        <item>@string/pref_video_quality_entry_wide</item>
         <item>@string/pref_video_quality_entry_mid</item>
         <item>@string/pref_video_quality_entry_low</item>
         <item>@string/pref_video_quality_entry_mms</item>
@@ -29,6 +30,7 @@
 
     <string-array name="pref_video_quality_entryvalues" translatable="false">
         <item>high</item>
+        <item>wide</item>
         <item>mid</item>
         <item>low</item>
         <item>mms</item>
@@ -107,6 +109,7 @@
 
     <array name="video_quality_icons" translatable="false">
         <item>@drawable/ic_viewfinder_video_quality_high</item>
+        <item>@drawable/ic_viewfinder_video_quality_wide</item>
         <item>@drawable/ic_viewfinder_video_quality_mid</item>
         <item>@drawable/ic_viewfinder_video_quality_low</item>
         <item>@drawable/ic_viewfinder_video_quality_mms</item>
@@ -127,6 +130,7 @@
         <item>@string/pref_camera_picturesize_entry_2592x1936</item>
         <item>@string/pref_camera_picturesize_entry_2592x1936</item>
         <item>@string/pref_camera_picturesize_entry_2592x1936</item>
+        <item>@string/pref_camera_picturesize_entry_2592x1552</item>
         <item>@string/pref_camera_picturesize_entry_2592x1552</item>
         <item>@string/pref_camera_picturesize_entry_2560x1712</item>
         <item>@string/pref_camera_picturesize_entry_2304x1728</item>
@@ -157,6 +161,7 @@
         <item>2592x1936</item>
         <item>2592x1952</item>
         <item>2592x1552</item>
+        <item>2592x1456</item>
         <item>2560x1712</item>
         <item>2304x1728</item>
         <item>2048x1536</item>
